<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScfesTimer</string>
    <string name="start">Done</string>
    <string name="stop">Cancel</string>
    <string name="goal_LP">Goal LP</string>
    <string name="current_LP">Current LP</string>
    <string name="full_notice">Full notification.</string>
    <string name="minutes_before_notice">minute before notification.</string>
    <string name="clear">Clear</string>
    <string name="check_LP_recovery_time">Check LP recovery time</string>
        <string name="setting">Settings</string>
        <string name="notisetting">Notice　Setting</string>
        <string name="vibe">Vibration</string>
        <string name="vibe_exp">When notice, vibration.</string>
        <string name="sound">Sound</string>
        <string name="sound_exp">When notice, sound.</string>
        <string name="led">LED</string>
        <string name="led_exp">When notice, LED.</string>
        <string name="FAQ">Frequently Asked Questions. (Japanese)</string>
        <string name="explain">
            Q.ボタンとか灰色で押せないし入力もできないよ！\n
            A.クリアかキャンセルボタンを押せばできるようになると思います\n
            \n
            Q.LP回復までの残り時間表示できないの？\n
            A.俺だって表示するようにしたい...\n
            とりあえず今のところは我慢してくださいごめんなさい。なんでもしますから！（するとは言っていない）\n
            \n
            Q.ん？なんか通知来なかったぞ...？\n
            A.端末再起動しませんでしたか？再起動すると通知はリセットされます\n
            \n
            FAQはなにかありましたら追加する予定です。\n
            \n
            \n
            作者について。\n
            今回初めてAndroidアプリを作りました。\n
            ﾌﾟﾖｸﾞﾗﾐﾝｸﾞも初心者です。\n
            いろいろ至らない部分もあると思いますが、ここをこうしたほうがいいとかこういうバグあったよ！などありましたらレビューに書いてください。\n
            \n\n\n\n
            最後までお読みいただきありがとうございました。\n
            バージョンアップとかある（と思う）のでこれからもよろしくお願いします。\n
            \n
            作者Twitterアカウント：@sugtao4423\n
            アイコン作者アカウント：@tsubasaneko83\n
            \n
            
        </string>
        <string name="assyen">✋(   ͡° ͜ʖ ͡° )ｱｯｼｪﾝﾃ</string>
        <string name="sakusya">Authors Twitter Accounts.</string>
        <string name="twitter">Twitter</string>
        <string name="nhi_">∩(´；ヮ；｀)∩ンヒィ～</string>
        <string name="icon_sakusya">Icon Authors Twitter Accounts.</string>
        <string name="update_activity">
            "バージョン2.5.5    2015年1月17日公開"\n
            あけましておめでとうございます。\n
            今年もよろしくお願い致します。\n
            \n
            ・アクションバーのアイコン画像がめちゃくちゃでかく表示されてしまう問題を解消\n
            \n
            ・「ご協力お願いします」の項目を削除\n
            \n
            ・「よくあるかもしれない質問」の文章を少し変更\n
            \n
            ・隠し機能の英語版の実装。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
            \n
            "バージョン2.5    12月29日公開"\n
            ・アイコンをお正月バージョンに変更しました！\n
            Thanks for @tsubasaneko83！\n
            それではみなさん、良いお年を。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン2.4    12月21日公開"\n
            ・英語に対応させました。（日本語以外の言語で開くと英語で表示されます）\n
            今回のアプデはそれだけですがお許しを。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン2.3    11月11日公開"\n
            ・今日はあずにゃんの誕生日です！！！！！！\n
            \n
            ・通知を設定しておくと、経過した時間に対してのLPが「現在のLP」に表示されるようになりました。\n
            簡単に言えば、スクフェス自体の現在のLPが表示されてる。ということですはい。\n
            （今までは通知設定したときのLPのままでした）\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン2.2    11月3日公開"\n
            ・設定などの項目を画面右上の「・・・」のボタンからアイコンに変更しました。\n
            これに伴い、FAQは設定画面内へ、更新履歴がメイン画面のアイコンへと移りました。\n
            \n
            この2つのアイコンはまたまた翼猫に描いて頂きました！\n
            （実はFAQのアイコンも描いて頂きましたが、使用しませんでした。Oh...sorry...）\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン2.1    10月29日公開"\n
            ・通知設定した後でも通知の設定をいじれるように変更しました。\n
            \n
            ・同じく、通知設定した後でも午前、午後表示の設定をいじれるようにしました。\n
            \n
            ・「LP回復時間確認」ボタンを押したときに残り時間を表示するようにしました。\n
            \n
            このアプデ誰得...？\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン2.0    10月26日公開"\n
            ・念願の残り時間表示の実装！\n
            \n
            ・LP回復時刻の文字列のバグを修正。\n
            \n
            ・メイン画面の文字が大きかったので少し小さくしました。\n
            \n
            ・アイコンを冬仕様に変更しました。\n
            Thanks for @tsubasaneko83！\n
            \n
            〜隠し機能の有効化方法について〜\n
            設定画面の「Twitterでこのアプリを共有する」をタップし、出てきたダイアログに\n「上上下下左右左右BA」\nと入力すると隠し機能の画面に飛ぶので、あとは画面の指示に従って設定してください。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン1.5.4    10月24日公開"\n
            ・ソースコードの軽量化をしました。\n
            今までくっそ汚かったからね。\n
            \n
            ・設定画面に「ご協力お願いします」を追加しました。\n
            自分が持っている端末だけで検証しても他端末でどう表示されているかわからないからね。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン1.5.3    10月19日公開"\n
            ・隠し機能を有効化したけど使わないって人のために無効化ボタンを追加しました。\n
            \n
            ・FAQのフォントサイズが大きすぎたので、更新履歴と同じサイズに変更しました。\n
            \n
            隠し機能の有効化方法は、残り時間表示を実装したときに公開しようと思ってます。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン1.5.2    10月10日公開"\n
            ・1.5.1は間違って開発用のデバッグモードで公開してしまった為、修正しました\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン1.5.1    10月10日公開"\n
            ・隠し機能に多少のバグがあったので改善しました（ただ通知時の文字が違うだけで機能には問題ありませんでした）\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン1.5    10月9日公開"\n
            ・隠し機能を割と実用的なものに変えました（ユーザー目線になってみた）\n
            隠し機能を開くためのヒントは「某キチガイTwitterクライアント」です\n
            \n
            前々から言ってるけど残り時間表示は必ず実装します\n
            リアルタイムで残り秒数が動いたりしなくたっていいよね！\n
            それなら早く実装できると思われます\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
			"バージョン1.4    9月27日公開"\n
			・回復時刻を午前、午後で表記する機能を実装\n
            残り時間の表示の実装はかなり先になるかもしれません。すいません。\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
			"バージョン1.3    9月22日公開"\n
            ・試験的にGoogle Analyticsを実装してみました\n
            \n
            タイマーの残り時間表示の実装はもう少し待ってください...\n
            なんかすごい難しそうなんだよ...\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
			"バージョン1.2.1    9月16日公開"\n
            ・なんのために作ったのかよくわからない隠し機能を実装\n
            （暗号とかそういうのに憧れてる人は見ると幸せになれる可能性が微レ存）\n
            \n
            ・設定カテゴリーの「設定」を「通知設定」に変更\n
            \n
            ・変更履歴のフォントサイズを20spから18spに変更\n
            \n
            ーーーーーーーーーーーーーーーーー\n
			\n 
            "バージョン1.2    9月12日公開"\n
			・未実装だった「Twitterでこのアプリを共有する」ボタンの実装が完了しました\n
			\n
			べっ、別に開発サボってたわけじゃないんだからね！\n
			\n
			・LPの値が（目標LP≦現在LP）の場合、トーストを表示させるようにしました\n
			\n
			・（開発者向け）\n
			SharedPreferences内でなぜかStringで管理してActivityでBooleanに戻すというわけのわからないことをやっていたので
			Boolean管理にしてソースを減らしました\n
			\n
			ーーーーーーーーーーーーーーーーー\n
			\n            
            "バージョン1.1.1    9月4日公開"\n
            ・通知が設定されたら「LP回復時間確認」ボタンを押せないようにしました\n
            \n
			ーーーーーーーーーーーーーーーーー\n
			\n
            "バージョン1.1    9月2日公開"\n
            ・タイマーが終了したら自動的に入力が行えるよう改良しました\n
            \n
            ・作者、アイコン作者へのTwitter垢飛ばしボタン追加\n
            \n
            ・変更点の画面追加。\n
            \n
			ーーーーーーーーーーーーーーーーー\n
            \n
            "バージョン1.0    8月28日公開"\n
            ・初めて///のアプリ公開\n
        </string>
        <string name="share">Share</string>
        <string name="thisAppShare">Share this app with Twitter.</string>
        <string name="thisAppShare_exp">The end of the letter is a link to the play store.</string>
            <string name="AMPM">Show AM/PM</string>
            <string name="AMPM_exp"></string>
            <string name="HideFunction">HideFunction</string>
            <string name="other">Other</string>
            <string name="update">Change log. (Japanese)</string>
            <string name="remaining_time">Remaining time：</string>
            <string name="hide_function_layout_experience">The LP recovery notification you will be able to set before any minutes.\nDo you want to activate?</string>
            <string name="hide_function_enable">activate</string>
            <string name="hide_function_LPof"></string>
            <string name="hide_function_beforeMinute">minutes before notification of LP recovery.</string>
            <string name="hide_function_entry">entry</string>
            <string name="hide_function_invalidate">invalidate</string>
            <string name="hide_function_dialog_enable">Has been activated!</string>
            <string name="hide_function_dialog_next___">Next, please enter any minutes in the field of under the button.</string>
            <string name="hide_function_dialog_already_enabled">Already enabled.</string>
            <string name="hide_function_dialog_entry_beforeMinute">minutes ago, registered.</string>
            <string name="hide_function_dialog_app_reboot">I will re-launch the app.</string>
            <string name="hide_function_dialog_reboot">Restart</string>
            <string name="hide_function_dialog_enable_earlier">Please enable earlier.</string>
            <string name="hide_function_dialog_not_enable">Not enabled.</string>
            <string name="hide_function_dialog_doyoudisable">Disable the hide function?</string>
            <string name="hide_function_dialog_ifDisable_appReboot">If you want to disable, restart the app.</string>
            <string name="hide_function_dialog_disable">Disable</string>
            <string name="hide_function_dialog_cancel">Cancel</string>
            <string name="error">Error</string>
</resources>
